# zero

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/ETL/: extract.py  load.py  transform.py
app/utils/: absenteeism_generator.py
docs/: home.md
tests/: test_extract.py  test_load.py  test_transform.py
