[project]
name = "zero"
version = "0.1.0"
description = "Zero shows the best Software Engineering's practices for Data Engineering projects."
authors = [
    {name = "LuisRicardo",email = "palharini.luis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "faker (>=37.0.2,<38.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"
run = "python app/main.py"
docs = "mkdocs serve"

[tool.poetry]
package-mode = false